--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=619436f37eece2b436b3fcbbfbbfa8a8
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-meta ###
