--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,4 +24,4 @@ services:
     # please note that last definitions always *replace* previous ones
     App\EventListener\KernelRequestListener:
         tags:
-            - { name: kernel.request_listener, event: kernel.request }
+            - { name: kernel.event_listener, event: kernel.request }
