--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,7 @@ services:
     #App\EventListener\KernelRequestListener:
         #tags:
             #- { name: kernel.event_listener, event: kernel.request }
+    App\EventListener\KernelRequestListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.request }
+            - { name: kernel.event_listener, event: kernel.exception }
